--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 *{
     margin: 0;
     padding: 0;
-    font-family: "Times New Roman", Times, serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 
@@ -49,7 +49,7 @@ nav button {
     z-index: 10;
 }
 .hero {
-    font-family: "Times New Roman", Times, serif;
+    font-family: 'Poppins', sans-serif;
     height: calc(100% - 100px);
     display: flex;
     justify-content: center;
@@ -62,7 +62,7 @@ nav button {
     
 }
 .hero> :nth-child(1) {
-    font-family: "Times New Roman", Times, serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: bolder;
     font-size: 48px;
     text-align: center;
